Added some style changes in cv-section and removed the leaf decoration

--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
     <!-- CV Section -->
     <section class="section cv-section">
       <div class="container">
-        <h2 style="color: white">My Journey</h2>
+        <h2 >My Journey</h2>
         <p style="font-size: 1.1rem; margin-bottom: 2rem; opacity: 0.9">
           Interested in learning more about my experience and skills?
         </p>
