--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
     <!-- Project Section -->
     <section class="section">
       <div class="container">
-        <h2 class="fade-in">FrondEnd dev Project</h2>
+        <h2 class="fade-in">FrontEnd dev Project</h2>
         <div class="project-card fade-in">
           <h3 class="project-title">🌱 ToDo App</h3>
           <p>React project</p>
