Added one more React project to the portfolio

--- a/index.html
+++ b/index.html
@@ -41,9 +41,9 @@
     <!-- Project Section -->
     <section class="section">
       <div class="container">
-        <h2 class="fade-in">FrontEnd dev Project</h2>
+        <h2 class="fade-in">FrontEnd dev Projects</h2>
         <div class="project-card fade-in">
-          <h3 class="project-title">🌱 ToDo App</h3>
+          <h3 class="project-title"> ToDo App</h3>
           <p>React project</p>
 
           <div class="video-container">
@@ -57,6 +57,31 @@
           <div class="project-links">
             <a
               href="https://github.com/Medieinstitutet/fed24s-the-last-todo-MariaHellsen.git"
+              class="btn btn-primary"
+              target="_blank"
+            >
+              🔗 View on GitHub
+            </a>
+          </div>
+        </div>
+      </div>
+
+      <div class="container">
+                <div class="project-card fade-in">
+          <h3 class="project-title"> Zoo App</h3>
+          <p>React project. Techniques used include: Router, Layout, Reducer, Context, Fetch, among others.</p>
+
+          <div class="video-container">
+    <video controls>
+        <source src="video/Zoo app.mp4" type="video/mp4">
+        Your browser does not support the video tag.
+    </video>
+</div>
+          </div>
+
+          <div class="project-links">
+            <a
+              href="https://github.com/MariaHellsen/Zoo-app"
               class="btn btn-primary"
               target="_blank"
             >
