--- a/index.html
+++ b/index.html
@@ -13,12 +13,12 @@
     <header>
       <div class="container">
         <img
-          src="pic/Linkedin photo_smaller.jpg"
+          src="pic/Linkedin pic_business style.png"
           alt="Profile Photo"
           class="profile-photo"
         />
         <h1 class="fade-in">Maria Hellsen</h1>
-        <p class="title fade-in">FrontEnd Developer trainee</p>
+        <p class="title fade-in">Seeking Frontend Dev Internship: Sept 22 - Nov 28</p>
       </div>
     </header>
 
