Changed one line

--- a/index.html
+++ b/index.html
@@ -96,9 +96,9 @@
     <section class="section cv-section">
       <div class="container">
         <h2 >My Journey</h2>
-        <p style="font-size: 1.1rem; margin-bottom: 2rem; opacity: 0.9">
+        <!-- <p style="font-size: 1.1rem; margin-bottom: 2rem; opacity: 0.9">
           Interested in learning more about my experience and skills?
-        </p>
+        </p> -->
         <a
           href="https://www.canva.com/design/DAGiSKKG-Vg/mGB7kYoZeu3Rf3VYIJh33w/view?utm_content=DAGiSKKG-Vg&utm_campaign=designshare&utm_medium=link2&utm_source=uniquelinks&utlId=h34ea795e8e"
           class="btn btn-secondary"
