--- a/index.html
+++ b/index.html
@@ -27,12 +27,9 @@
         <h2 class="fade-in">About Me</h2>
         <div class="summary fade-in">
           <p>
-            After working in customer- and business-facing roles in tech and
-            other industries, I am now stepping into the code zone as a Frontend
-            Developer. I aim to be a tech team player, able to contribute to
-            different aspects of development—from building modern user
-            interfaces and integrating APIs to understanding business needs, UX,
-            and facilitating meetings and workshops.
+         After years in customer and business-facing roles across various industries, I'm now transitioning into the code zone as a Frontend Developer. I've successfully completed the first year of Medieinstitutet's Frontend Developer program, which included dedicated studies in both frontend technologies (HTML, CSS, React, TypeScript) and a foundational understanding of backend development.
+
+I'm now seeking an internship where I can apply and expand my skills. I'm particularly keen to gain practical experience in areas like troubleshooting, integration testing, E2E testing, Git, agile methodologies, API calls, UX, and Figma.
           </p>
         </div>
       </div>
