One more small change

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
           <p>
          After years in customer and business-facing roles across various industries, I'm now transitioning into the code zone as a Frontend Developer.<br>
          I've successfully completed the first year of Medieinstitutet's Frontend Developer program, which included dedicated studies in both frontend technologies (HTML, CSS, React, TypeScript) and a foundational understanding of backend development.<br>
-         I'm now seeking an internship where I can apply and expand my skills. I'm particularly keen to gain practical experience in areas like troubleshooting, integration testing, E2E testing, Git, agile methodologies, API calls, UX, and Figma.
+         I'm now seeking an internship where I can apply and expand my skills. I'm particularly keen to gain practical experience in areas like troubleshooting, React, TypeScript, integration testing, E2E testing, Git, agile methodologies, API calls, UX, and Figma.
           </p>
         </div>
       </div>
