Changed summary to paragraphs

--- a/index.html
+++ b/index.html
@@ -26,11 +26,28 @@
       <div class="container">
         <h2 class="fade-in">About Me</h2>
         <div class="summary fade-in">
-          <p>
-         After years in customer and business-facing roles across various industries, I'm now transitioning into the code zone as a Frontend Developer.<br>
-         I've successfully completed the first year of Medieinstitutet's Frontend Developer program, which included dedicated studies in both frontend technologies (HTML, CSS, React, TypeScript) and a foundational understanding of backend development.<br>
-         I'm now seeking an internship where I can apply and expand my skills. I'm particularly keen to gain practical experience in areas like troubleshooting, React, TypeScript, integration testing, E2E testing, Git, agile methodologies, API calls, UX, and Figma.
-          </p>
+            <p>
+    After years in <strong>customer and business-facing roles</strong> across various industries,
+    I am now adding programming competence to my profile, stepping into the <strong>code zone as a Frontend Developer</strong>.
+  </p>
+
+  <p>
+    I've successfully completed the first year of Medieinstitutet's Frontend Developer program,
+    which included dedicated studies in both <strong>frontend technologies</strong> (HTML, CSS, React, TypeScript)
+    and a foundational understanding of <strong>backend development</strong>.
+  </p>
+
+  <p>
+    I'm now seeking an internship where I can apply and expand my skills.
+    I'm particularly keen to gain practical experience in areas like <strong>troubleshooting, integration testing,
+    E2E testing, Git, agile methodologies, API calls, UX, and Figma</strong>.
+  </p>
+
+  <p>
+    My ultimate goal with this internship is to discover my niche within a tech team or company,
+    leveraging both my <strong>programming skills and AI knowledge</strong>, alongside my proven abilities in <strong>communication,
+    coordination, and process facilitation</strong>.
+  </p>
         </div>
       </div>
     </section>
