Added margin btw p in summary

--- a/index.html
+++ b/index.html
@@ -39,8 +39,7 @@
 
   <p>
     I'm now seeking an internship where I can apply and expand my skills.
-    I'm particularly keen to gain practical experience in areas like <strong>troubleshooting, integration testing,
-    E2E testing, Git, agile methodologies, API calls, UX, and Figma</strong>.
+    I'm particularly keen to gain practical experience in areas like <strong>troubleshooting, testing, frontend development (React & TypeScript), Git, agile methodologies, API calls, UX, and Figma.</strong>.
   </p>
 
   <p>
