Final addits to summary

--- a/index.html
+++ b/index.html
@@ -28,8 +28,7 @@
         <div class="summary fade-in">
             <p>
     After years in <strong>customer and business-facing roles</strong> across various industries,
-    I am now adding programming competence to my profile, stepping into the <strong>code zone as a Frontend Developer</strong>.
-  </p>
+    I am now adding <strong>programming competence </strong> to my profile.</p>
 
   <p>
     I've successfully completed the first year of Medieinstitutet's Frontend Developer program,
@@ -39,11 +38,11 @@
 
   <p>
     I'm now seeking an internship where I can apply and expand my skills.
-    I'm particularly keen to gain practical experience in areas like <strong>troubleshooting, testing, frontend development (React & TypeScript), Git, agile methodologies, API calls, UX, and Figma.</strong>.
+    I'm particularly keen to gain more experience in areas like <strong>troubleshooting, testing, frontend development (React & TypeScript), Git, agile methodologies, API calls, UX, and Figma.</strong>
   </p>
 
   <p>
-    My ultimate goal with this internship is to discover my niche within a tech team or company,
+    My goal with this internship is also to discover my niche within a tech team or company,
     leveraging both my <strong>programming skills and AI knowledge</strong>, alongside my proven abilities in <strong>communication,
     coordination, and process facilitation</strong>.
   </p>
