Changed summary text  and placed CV btm to the summary section

--- a/index.html
+++ b/index.html
@@ -27,28 +27,29 @@
         <h2 class="fade-in">About Me</h2>
         <div class="summary fade-in">
             <p>
-    After years in <strong>customer and business-facing roles</strong> across various industries,
-    I am now adding <strong>programming competence </strong> to my profile.</p>
+    Completing a year of full-time Frontend Developer studies (Medieinstitutet), I'm ready for an internship (Sep 22 - Nov 28) to deepen my skills in <strong>React, TypeScript, and testing.</strong> </p>
 
   <p>
-    I've successfully completed the first year of Medieinstitutet's Frontend Developer program,
-    which included dedicated studies in both <strong>frontend technologies</strong> (HTML, CSS, React, TypeScript)
-    and a foundational understanding of <strong>backend development</strong>.
+    As a <strong>Certified Product Owner</strong> with two years' <strong>experience in a tech startup</strong> and 10 years in <strong>project management and partnership development</strong>, I offer a unique blend of <strong>user-centric thinking, and proven abilities in communication, coordination, and process facilitation.</strong>
   </p>
 
   <p>
-    I'm now seeking an internship where I can apply and expand my skills.
-    I'm particularly keen to gain more experience in areas like <strong>troubleshooting, testing, frontend development (React & TypeScript), Git, agile methodologies, API calls, UX, and Figma.</strong>
+    My ambition is to identify a niche during the internship where I can leverage both my new programming skills and comprehensive organizational capabilities.
   </p>
 
-  <p>
-    My goal with this internship is also to discover my niche within a tech team or company,
-    leveraging both my <strong>programming skills and AI knowledge</strong>, alongside my proven abilities in <strong>communication,
-    coordination, and process facilitation</strong>.
-  </p>
-        </div>
+          </div>
+          
       </div>
+      <a
+          href="https://www.canva.com/design/DAGiSKKG-Vg/mGB7kYoZeu3Rf3VYIJh33w/view?utm_content=DAGiSKKG-Vg&utm_campaign=designshare&utm_medium=link2&utm_source=uniquelinks&utlId=h34ea795e8e"
+          class="btn btn-primary"
+          target="_blank"
+        >
+          📄 View My CV
+        </a>
     </section>
+
+ 
 
     <!-- Project Section -->
     <section class="section">
@@ -105,13 +106,13 @@
     </section>
 
     <!-- CV Section -->
-    <section class="section cv-section">
+    <!-- <section class="section cv-section">
       <div class="container">
-        <h2 >My Journey</h2>
+        <h2 >My Journey</h2> -->
         <!-- <p style="font-size: 1.1rem; margin-bottom: 2rem; opacity: 0.9">
           Interested in learning more about my experience and skills?
         </p> -->
-        <a
+        <!-- <a
           href="https://www.canva.com/design/DAGiSKKG-Vg/mGB7kYoZeu3Rf3VYIJh33w/view?utm_content=DAGiSKKG-Vg&utm_campaign=designshare&utm_medium=link2&utm_source=uniquelinks&utlId=h34ea795e8e"
           class="btn btn-secondary"
           target="_blank"
@@ -119,7 +120,7 @@
           📄 View My CV
         </a>
       </div>
-    </section>
+    </section> -->
 
     <!-- Footer -->
     <footer>
