A small change in text

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         <h2 class="fade-in">About Me</h2>
         <div class="summary fade-in">
             <p>
-    Completing a year of full-time Frontend Developer studies (Medieinstitutet), I'm ready for an internship (Sep 22 - Nov 28) to deepen my skills in <strong>React, TypeScript, and testing.</strong> </p>
+    Completing a year of full-time Frontend Developer studies (Medieinstitutet), I'm looking for an internship (Sep 22 - Nov 28) to deepen my skills in <strong>React, TypeScript, and testing.</strong> </p>
 
   <p>
     As a <strong>Certified Product Owner</strong> with two years' <strong>experience in a tech startup</strong> and 10 years in <strong>project management and partnership development</strong>, I offer a unique blend of <strong>user-centric thinking, and proven abilities in communication, coordination, and process facilitation.</strong>
